[BUGFIX] Adjust css in new content element wizard
The rendering of the plugin menu gets messed up if a plugin hasn't any
description. This patch clears floating for every list item to ensure
it is displayed on the left side.

Resolves: #53895
Releases: 6.2
Reviewed-on: https://review.typo3.org/25655
Tested-by: Stefan Froemken
Tested-by: Steffen Ritter

--- a/typo3/sysext/t3skin/Resources/Public/Css/structure/module_web_new_element.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/structure/module_web_new_element.css
@@ -3,15 +3,33 @@
 - - - - - - - - - - - - - - - - - - - - - */
 
 .contentelement-wizard {
-	margin: 5px;
+	margin: 10px;
 }
 
-.contentelement-wizard li{
-	margin-bottom: 3px;
+.contentelement-wizard li {
+	margin-bottom: 10px;
+}
+.contentelement-wizard li:last-child {
+	margin-bottom: 0px;
 }
 
-.contentelement-wizard .input,
-.contentelement-wizard .icon {
-	float:left;
+.contentelement-wizard-item:before,
+.contentelement-wizard-item:after {
+	content: " ";
+	display: table;
+}
+
+.contentelement-wizard-item:after {
+	clear: both;
+}
+
+.contentelement-wizard-item-input,
+.contentelement-wizard-item-icon {
+	float: left;
 	margin-right: 5px;
+}
+
+.contentelement-wizard-item-icon a,
+.contentelement-wizard-item-icon img {
+	display: block;
 }
